--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "GLEW"]
 	path = GLEW
 	url = https://github.com/Perlmint/glew-cmake.git
+[submodule "GLFW"]
+	path = GLFW
+	url = https://github.com/glfw/glfw.git
